- Initialize fixture feature:   - Implement fixture's listing UI with mock data.   - Implement fixture's float selection tab bar.   - Implement animated fixture's haeder.   - General modifications.

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
     path: ../infrastructure/shared_data/
 
   ## Features
+  fixture:
+    path: ../features/fixture
 
   flutter_localizations:
     sdk: flutter
