- Implement fixture's details screen UI:   - Implement dynamic lineup builder widget with mock data.

--- a/features/fixture/pubspec.yaml
+++ b/features/fixture/pubspec.yaml
@@ -32,7 +32,7 @@ flutter:
 
 
   assets:
-    - assets/fixtures.json
+    - assets/lineup_list.json
     - assets/icons/
     - assets/images/
     - assets/subtitles/
